Tests/ContributeWordPressTests/Helpers/Error/MarkdownExtractorError.swift
import Foundation

internal enum MarkdownExtractorError: EquatableError {}
